# ini-roundtrip

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  lint.yml  release.yml
benches/: basic_bench.rs
src/: lib.rs  parse.rs  tests.rs
src/parse/: avx2.rs  generic.rs  sse2.rs  swar32.rs  swar64.rs
