[package]
authors = ["Arvid Norlander"]
categories = ["config", "parser-implementations"]
description = "Fast format preserving (round-tripping) INI-parser"
edition = "2021"
exclude = ["/.github/", "/.chglog/"]
keywords = ["ini", "no-std", "config", "configuration", "parser"]
license = "MIT"
name = "ini-roundtrip"
repository = "https://github.com/VorpalBlade/ini-roundtrip"
rust-version = "1.74.0"
version = "0.1.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "basic_bench"

[dependencies]
cfg-if = "1.0.0"

[lints.rust]
rust-2018-idioms = "warn"
unreachable_pub = "warn"
# This is no-std, but the bench uses std
unused-extern-crates = { level = "allow", priority = 1 }

[lints.clippy]
doc_markdown = "warn"
needless_pass_by_value = "warn"
ptr_as_ptr = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_used = "warn"
