[package]
authors = ["Arvid Norlander"]
categories = ["config", "parser-implementations"]
description = "Fast format preserving (round-tripping) INI-parser"
edition = "2021"
exclude = ["/.github/", "/.chglog/"]
keywords = ["ini", "no-std", "config", "configuration", "parser"]
license = "MIT"
name = "ini-roundtrip"
repository = "https://github.com/VorpalBlade/ini-roundtrip"
rust-version = "1.74.0"
version = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "basic_bench"

[dependencies]
cfg-if = "1.0.0"

[lints.rust]
rust-2018-idioms = "warn"
unreachable_pub = "warn"
# This is no-std, but the bench uses std
unused-extern-crates = { level = "allow", priority = 1 }

[lints.clippy]
assigning_clones = "warn"
doc_markdown = "warn"
format_push_string = "warn"
needless_pass_by_value = "warn"
ptr_as_ptr = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"
