[package]
authors = ["Arvid Norlander"]
categories = ["config", "parser-implementations"]
description = "Fast format preserving (round-tripping) INI-parser"
edition = "2021"
exclude = ["/.github/", "/.chglog/"]
keywords = ["ini", "no-std", "config", "configuration", "parser"]
license = "MIT"
name = "ini-roundtrip"
repository = "https://github.com/VorpalBlade/ini-roundtrip"
rust-version = "1.81.0"
version = "0.2.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
harness = false
name = "basic_bench"

[dependencies]
cfg-if = "1.0.1"

[lints.rust]
elided_lifetimes_in_paths = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
# This is no-std, but the bench uses std
unused-extern-crates = { level = "allow", priority = 1 }

[lints.clippy]
assigning_clones = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
equatable_if_let = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_push_string = "warn"
ignored_unit_patterns = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
ptr_as_ptr = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unnested_or_patterns = "warn"
unwrap_used = "warn"
use_self = "warn"
wildcard_imports = "warn"
